# OO2026vkt_Eemeli_Kangas

./: .gitignore  README.md
Viikko 1/: CMakeLists.txt  main.cpp
Viikko 2/: CMakeLists.txt
Viikko 2/RNG/: CMakeLists.txt  dht.cpp  dht.h  lcd.cpp  lcd.h  main.cpp  random.cpp  random.h
Viikko 2/Viikkotehtava2/: game.cpp  main.cpp
Viikko 3/Chef_viikkotehtava3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Viikko 3/Class-harjoitus/: faija.cpp  son.cpp
Viikko 3/Viikkotehtava_3/: CMakeLists.txt  faija.h  main.cpp  son.h
Viikko 4/viikkotehtava4/: asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Viikko 5/Viikkotehtava_5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikko 6/Viikko_6teoria/: CMakeLists.txt  main.cpp  student.cpp  student.h
Viikko 6/Viikkotehtava_6/: main.cpp  student.cpp  student.h
Viikko 7/QT_harj/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
Viikko 7/Viikkotehtava_7_1_laskuri/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko 7/Viikkotehtava_7_laskin/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko 7/widget_esim/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Viikko 8/viikkotehtava8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
